--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
       <h1>qanun</h1>
       <p class="sub">منصة الخدمات القانونية</p>
-      <p class="desc">هذا الاستبيان لجمع آراء المستخدمين لتطوير التطبيق وتحسين تجربة الاستخدام.</p>
+      <p class="desc">يعد تطبيق Qanun منصة رائدة تهدف إلى إعادة صياغة مفهوم الوصول إلى العدالة والمعرفة الحقوقية في المملكة، عبر تقديم بيئة قانونية رقمية متكاملة تجمع بين الدقة البشرية والذكاء الاصطناعي الفائق</p>
       <div class="contact">للتواصل أو الاستفسار: <a href="mailto:qanunjo@gmail.com">qanunjo@gmail.com</a></div>
     </section>
 
@@ -344,3 +344,4 @@
   </script>
 </body>
 </html>
+
